# cuSIFT

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  RGBD_utils.cpp  RGBD_utils.h  cuImage.cu  cuImage.h  cuSIFT.cu  cuSIFT.h  cuSIFT_D.cu  cuSIFT_D.h  cuSIFT_H.cu  cuSIFT_H.h  cudaSift.h  cudaSiftD.cu  cudaSiftH.cu  cudaSiftH.h  cudautils.h  cutils.h  estimateRTCPU.h  estimateRTGPU.cu  main.cpp
extras/: debug.cpp  debug.h  homography.cu  homography.h  matching.cu  matching.h  math_utils.cu  math_utils.h  rigidTransform.cu  rigidTransform.h
test/: descriptor.m  detector.cpp  test.cpp
test/data/: INTRINSICS  cusift1  cusift1_check  gray1  sift1
test/data/Rt/: Rt1_2
test/data/match/: match1_2
test/data/match_indices/: match_indices1_2
test/data/sift/: sift1  sift2
